--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="navbar">
         <div class="logo"><img src="logo - Copy.svg" alt="logo" class="fylo" /></div>
         <div class="beginning">
-          <div class="nav"><a href="index.html" class="toplink">Features</a></div>
-          <div class="nav"><a href="index.html" class="toplink">Team</a></div>
-          <div class="nav"><a href="index.html" class="toplink">Sign in</a></div>
+          <div class="nav"><a href="Untitled-1 (2).html" class="toplink">Features</a></div>
+          <div class="nav"><a href="Untitled-1 (2).html" class="toplink">Team</a></div>
+          <div class="nav"><a href="Untitled-1 (2).html" class="toplink">Sign in</a></div>
         </div>
       </div>
       <div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="startcontainer">
                   <div class="start">
-                    <a href="index.html" class="starting">Get Started</a>
+                    <a href="Untitled-1 (2).html" class="starting">Get Started</a>
                   </div>
                 </div>
               </div>
@@ -58,7 +58,7 @@
         <div class="header"><h2>Stay productive, wherever you are</h2></div>
         <div class="paragraph">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</div>
         <div class="paragraph">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</div>
-        <div class="guide"><a href="index.html" class="guidance">See how Fylo works <img src="icon-arrow.svg" alt="arrow"></a></div>
+        <div class="guide"><a href="Untitled-1 (2).html" class="guidance">See how Fylo works <img src="icon-arrow.svg" alt="arrow"></a></div>
         <div class="part2">
           <div class="bubble">
             <div class="quote"><img src="icon-quotes.svg" alt="quote" class="quotee"></div>
@@ -81,7 +81,7 @@
               placeholder="email@example.com"
             /></div>
             <div class="begin">
-              <a href="index.html" class="starting">Get Started For Free</a>
+              <a href="Untitled-1 (2).html" class="starting">Get Started For Free</a>
             </div>
           </div>
         </div>
@@ -93,15 +93,15 @@
           </div>
           <div class="mother">
             <div class="finallinks">
-              <div><a href="index.html" class="endinglinks">About</a></div>
-              <div><a href="index.html" class="endinglinks">Jobs</a></div>
-              <div><a href="index.html" class="endinglinks">Press</a></div>
-              <div><a href="index.html" class="endinglinks">Blog</a></div>
+              <div><a href="Untitled-1 (2).html" class="endinglinks">About</a></div>
+              <div><a href="Untitled-1 (2).html" class="endinglinks">Jobs</a></div>
+              <div><a href="Untitled-1 (2).html" class="endinglinks">Press</a></div>
+              <div><a href="Untitled-1 (2).html" class="endinglinks">Blog</a></div>
             </div>
             <div class="finallinks2">
-              <div><a href="index.html"  class="endinglinks">Contact Us</a></div>
-              <div><a href="index.html"  class="endinglinks">Terms</a></div>
-              <div><a href="index.html"  class="endinglinks">Privacy</a></div>
+              <div><a href="Untitled-1 (2).html"  class="endinglinks">Contact Us</a></div>
+              <div><a href="Untitled-1 (2).html"  class="endinglinks">Terms</a></div>
+              <div><a href="Untitled-1 (2).html"  class="endinglinks">Privacy</a></div>
             </div>
           </div>
           <div class="handles">
